# Recupera

Back-End/: Dockerfile  docker-compose.yml  pyproject.toml
Back-End/app/: __init__.py  main.py  requirements.txt
Back-End/app/config/: connection.py  init_db.py  settings.py
Back-End/app/controllers/: auth_controller.py  user_controller.py
Back-End/app/models/: object_model.py  user_model.py
Back-End/app/routers/: router.py
Back-End/app/schemas/: object_schemas.py  user_schemas.py
Back-End/app/security/: security.py
Back-End/app/utils/: dependecies.py  models.py
Back-End/migrations/: env.py
Back-End/migrations/versions/: 0006e1e1eeb7_remove_cpf.py  106bca23b161_adcicionando_classe_objeto.py  1e46060ef6a6_aaaa.py  27fd62915802_add_email.py  4b9643d1c9cb_firts_two.py  88f3d401d7e1_att_2.py  9e093089a5ae_att.py  c97356cf2dda_add_cpf.py
Front-End/recurepa-fe/: .gitignore  index.html  package-lock.json  package.json
Front-End/recurepa-fe/src/: App.tsx  main.tsx
Front-End/recurepa-fe/src/hooks/: useAuth.ts  useCadastro.ts
Front-End/recurepa-fe/src/pages/: Cadastro.tsx  Home.tsx  Login.tsx
Front-End/recurepa-fe/src/router/: index.tsx
Front-End/recurepa-fe/src/ui/components/: Button.tsx  ButtonHeader.tsx  Dropdown.tsx  Header.tsx  Input.tsx  ObjectItem.tsx  Objects.tsx  SubHeader.tsx
