[tool.poetry]
name = "recupera"
version = "0.1.0"
description = ""
authors = ["Matheus Mota <matheuzwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
pydantic-settings = "^2.6.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.3"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = "^0.32.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
python-multipart = "^0.0.16"
pyjwt = "^2.9.0"
psycopg2-binary = "^2.9.10"
tzdata = "^2024.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"

[tool.ruff]
line-lenght = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = [
"E","F","W","PL","PT","I",
]

[tool.taskipy.tasks]
run = 'uvicorn app.main:app --reload --port 8001'
test = 'pytest --cov=app'
createdb = 'python app/config/init_db.py'
path = '$env:PYTHONPATH = "."'
run-migrate = 'alembic upgrade head'
run-delete = 'alembic downgrade head'
create-migrate = 'alembic revision --autogenerate -m "{m}"'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
